deployments/homelab/cloud/services/46-forge/native-brokers.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: native-brokers
  namespace: forge-control
spec:
  order: 16
  selector: all()
  types:
  - Ingress
  - Egress
  ingress:
  - action: Deny
  egress:
  - action: Allow
    protocol: TCP
    destination:
      namespaceSelector: kubernetes.io/metadata.name == 'forge'
      selector: app.kubernetes.io/name == 'forgejo'
      ports: [8083]
  - action: Allow
    protocol: TCP
    destination:
      namespaceSelector: kubernetes.io/metadata.name == 'forge-cache'
      selector: app.kubernetes.io/name == 'forge-cache'
      ports:
      - 8082
  - action: Allow
    protocol: UDP
    destination:
      namespaceSelector: kubernetes.io/metadata.name == 'kube-system'
      selector: k8s-app == 'kube-dns'
      ports:
      - 53
  - action: Allow
    protocol: TCP
    destination:
      namespaceSelector: kubernetes.io/metadata.name == 'kube-system'
      selector: k8s-app == 'kube-dns'
      ports:
      - 53
  - action: Allow
    protocol: TCP
    destination:
      namespaceSelector: kubernetes.io/metadata.name == 'envoy-gateway-system'
      selector: gateway.envoyproxy.io/owning-gateway-name == 'services' && gateway.envoyproxy.io/owning-gateway-namespace
        == 'services-network'
      ports:
      - 10443
  - action: Allow
    protocol: TCP
    destination:
      nets:
      - 10.21.40.122/32
      ports:
      - 443
  - action: Allow
    protocol: TCP
    source:
      selector: forge.fahrican.com/platform == 'windows'
    destination:
      nets:
      - 10.21.20.130/32
      ports:
      - 443
  - action: Allow
    protocol: TCP
    source:
      selector: forge.fahrican.com/platform == 'macos'
    destination:
      nets:
      - 10.21.40.126/32
      ports:
      - 22
  - action: Allow
    source:
      selector: forge.fahrican.com/platform == 'linux'
    destination:
      services:
        name: kubernetes
        namespace: default
  - action: Deny
