deployments/homelab/cloud/services/46-forge/snapshot-backups.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: forge-snapshot-backup
  namespace: forge
spec:
  order: 15
  selector: app.kubernetes.io/name == 'forge-snapshot-backup'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Deny
  egress:
  - action: Allow
    destination:
      services:
        name: kubernetes
        namespace: default
  - action: Deny
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: forge-snapshot-export
  namespace: forge
spec:
  order: 15
  selector: app.kubernetes.io/name == 'forge-snapshot-export'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Deny
  egress:
  - action: Deny
